Kubernetes/Day-26/database.yaml
# Database deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: database-app
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        tier: database
        track: dev
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - name: mysql
          containerPort: 3306
          protocol: TCP
---
# Database service
apiVersion: v1
kind: Service
metadata:
  namespace: database-app
  name: database-svc
spec:
  selector:
    app: database
  ports:
  - port: 3306
    targetPort: 3306
