Kubernetes/Day-26/frontend.yaml
# Front end deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: frontend-app
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
        tier: frontend
        track: dev
    spec:
      containers:
      - name: frontend-app
        image: nginx:latest
        ports:
        - containerPort: 80
---
# Front end service
apiVersion: v1
kind: Service
metadata:
  namespace: frontend-app
  name: frontend-svc
spec:
  selector:
    app: frontend-app
  ports:
  - port: 80
    targetPort: 80
---
